medicure-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medicure-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /patient
            pathType: Prefix
            backend:
              service:
                name: patient-service
                port:
                  number: 80
          - path: /doctor
            pathType: Prefix
            backend:
              service:
                name: doctor-service
                port:
                  number: 80
          - path: /appointment
            pathType: Prefix
            backend:
              service:
                name: appointment-service
                port:
                  number: 80
